近几个月来的开发与测试

--- a/web/index.html
+++ b/web/index.html
@@ -57,5 +57,6 @@
     </a-scene>
     
     <!-- Dynamically add places from Javascript -->
-    <script src="./places.js"></script>
+    <!-- <script src="./js/places.js"></script> -->
+    <script src="./js/test1.js"></script>
 </body>
